--- a/GabrielC_EquiposLigaPro/Views/Equipos/Index.cshtml
+++ b/GabrielC_EquiposLigaPro/Views/Equipos/Index.cshtml
@@ -16,6 +16,12 @@
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Ciudad)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Titulos)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Extranjeros)
             </th>
             <th>
@@ -29,6 +35,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Ciudad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Titulos)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Extranjeros)
