--- a/GabrielC_EquiposLigaPro/Views/Equipos/Create.cshtml
+++ b/GabrielC_EquiposLigaPro/Views/Equipos/Create.cshtml
@@ -17,6 +17,16 @@
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Ciudad" class="control-label"></label>
+                <input asp-for="Ciudad" class="form-control" />
+                <span asp-validation-for="Ciudad" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Titulos" class="control-label"></label>
+                <input asp-for="Titulos" class="form-control" />
+                <span asp-validation-for="Titulos" class="text-danger"></span>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Extranjeros" /> @Html.DisplayNameFor(model => model.Extranjeros)
