--- a/GabrielC_EquiposLigaPro/Views/Equipos/Details.cshtml
+++ b/GabrielC_EquiposLigaPro/Views/Equipos/Details.cshtml
@@ -17,6 +17,18 @@
             @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Ciudad)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Ciudad)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Titulos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Titulos)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Extranjeros)
         </dt>
         <dd class = "col-sm-10">
